plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.4'  // ✅ VERSÃO ESTÁVEL
    id 'io.spring.dependency-management' version '1.1.4'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

group = 'com.nunes'
version = '0.0.1-SNAPSHOT'
description = 'Site que visa venda de carros'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

test {
    enabled = false
}

dependencies {
    // ✅ SPRING BOOT STARTERS (VERSÕES COMPATÍVEIS)
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // ✅ SPRINGDOC OPENAPI (VERSÃO COMPATÍVEL)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // BANCO DE DADOS
    implementation 'com.oracle.database.jdbc:ojdbc11:21.9.0.0'

    // LOMBOK
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // DESENVOLVIMENTO
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // TESTES
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.2.RELEASE'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}